fix: remove overflow-hidden from navbar main container for improved layout

--- a/frontend/src/components/navbar/navbar.css
+++ b/frontend/src/components/navbar/navbar.css
@@ -1,7 +1,7 @@
 @reference '@/index.css';
 
 .navbar-main_container {
-  @apply text-fg-default w-full flex justify-center items-center fixed top-0 right-0 left-0 z-20 border-b overflow-hidden;
+  @apply text-fg-default w-full flex justify-center items-center fixed top-0 right-0 left-0 z-20 border-b;
 }
 
 .navbar-container {
